@@ -1,3 +1,8 @@
+2011-10-14  Karl Berry  <karl@gnu.org>
+
+	* lib/substring.c: remove, only used in C makeinfo, no longer built.
+	Leaving us with just xexit in lib, but that still seems useful.
+
 2011-10-13  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (Three Arguments): same requirements as node names.
